0.14 (stable)
    1) Improved tests in accordance with reports version 0.13
    2) Fixed few misprints in Changes & TODO files

0.13 (stable)
    1) Fix bug - sometimes generated warnging for trigger time (was undefined)
    2) Now a compute code can throw die with CHI::Cascade::Value object - this value
       will be returned from run method but value will not be saved in cache as
       computed value
    3) Improved a behavior with some buggy situations with cache (cache doesn't
       save a value by some reasons for example)

0.12
    - More stable version as i think ;-) Please use it
    - Improved signal handling in tests (for memcached killing)
    - Fixed bug - dependencies as sub {} didn't get a qr_params properly
    - Fixed rule's bug

0.11
    - Fixed bug (sometime dead locks were after target locking)
    - Added 'busy_lock' option in contructor and to 'rule' method
    - All 'set's in cache executed with expire as 'never' (excluding locking of
      targets)

0.1
    - Changed API of execution 'code' of rules
    - Now you can use instances of CHI::Cascade::Rule in your target codes
    - Now you can pass any parameters to target codes described in rules

0.05
    - More improved the test t/03_memcached_multi.t
    - Tests with memcached for root user are not started (passed)
      Now they are started
    - More ready distributive

0.03
    - Fixed bugs in tests (for example not be stopped memcached)
    - New test - multi-process reading/getting from memcached (with forks)
    - Added documentation about constructor and methods.

0.02
    - Added repo meta info of github.com repository
    - few changes of Makefile.PL ('README' file is generated by auto)
    - Added 'Changes' file ;-)
    - Added TODO file

0.01
    - First release